# Sudoku

./: .gitignore  CHANGELOG.md  README.md  Sudoku.cabal  bench.html
app/: Main.hs
benchmark/: Main.hs
others/: Format.hs  Hutton.lhs  Merge.hs  Minimal.hs  SdkMSol2.hs  SortByF.hs  SuDoku.hs  SudokuWss.hs  T40.hs  T44.hs  Test.hs  run.sh
others/Naur/: Format.hs  SdkMSol2.hs  T40.hs  T44.hs  Test.hs  clean.sh  run.sh
src/: Generics.hs  Hutton.lhs  NanoParsec.hs  Norvig.hs  Sudoku.hs  Types4.hs  efactor
