cabal-version:   2.0
name:            Sudoku
version:         0.0.0
synopsis:        See README for more info
description:     See README for more info
homepage:        https://github.com/jrp2014/Sudoku
bug-reports:     https://github.com/jrp2014/Sudoku/issues
license:         MIT
license-file:    LICENSE
author:          jrp2014
maintainer:      jrp
copyright:       2019 jrp2014
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:     GHC ==8.6.4 || ==8.6.5 || ==8.10.3

source-repository head
  type:     git
  location: https://github.com/jrp2014/Sudoku.git

library
  hs-source-dirs:   src
  exposed-modules:
    Generics
    Hutton
    NanoParsec
    Norvig
    Sudoku
    Types4

  -- functor-combo uses type-unary which doesn't compile with newtype-generics 0.6
  build-depends:
      array
    , base              >=4.13.0.0
    , functor-combo
    , mtl
    , newtype-generics < 0.6
--    , newtype

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints -fhide-source-paths
    -Wmissing-export-lists -Wpartial-fields -Wunused-packages
    -fwrite-ide-info -hiedir=.hie

  default-language: Haskell2010

executable Sudoku
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
      base    >=4.13.0.0
    , Sudoku

  ghc-options:
    -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
    -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
    -Widentities -Wredundant-constraints -fhide-source-paths
    -Wmissing-export-lists -Wpartial-fields -Wunused-packages
    -fwrite-ide-info -hiedir=.hie

  default-language: Haskell2010

test-suite Sudoku-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
      base    >=4.13.0.0
    , Sudoku

  ghc-options:
    -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
    -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
    -Widentities -Wredundant-constraints -fhide-source-paths
    -Wmissing-export-lists -Wpartial-fields -Wunused-packages
    -fwrite-ide-info -hiedir=.hie

  default-language: Haskell2010

benchmark Sudoku-benchmark
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benchmark
  main-is:          Main.hs
  build-depends:
      base       >=4.13.0.0
    , criterion
    , Sudoku

  ghc-options:
    -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
    -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat
    -Widentities -Wredundant-constraints -fhide-source-paths
    -Wmissing-export-lists -Wpartial-fields -Wunused-packages
    -fwrite-ide-info -hiedir=.hie

  default-language: Haskell2010
